5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4016/executions/1573_1332.log
== SUBMITION (2019-03-31 13:59:07) 
-- CODE:
aresta =6
area = A=32√3a2
 
print(round(area, 4))
-- EXECUTION TIME:
0.198561
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = A=32\u221a3a2
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:59:07) 
-- CODE:
aresta =6
area = A=32√3a2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=32√3a2
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 13:59:09) 
-- CODE:
aresta =6
area = A=32√3a2
 
print(round(area, 4))
-- EXECUTION TIME:
0.188641
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = A=32\u221a3a2
                  ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 13:59:11) 
-- CODE:
aresta =6
area = A=32√3a2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=32√3a2
                  ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:04:30) 
-- CODE:
aresta =5
area =6
 
print(round(area, 4))
-- EXECUTION TIME:
0.186256
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:05:13) 
-- CODE:
aresta =5**6
area =6
 
print(round(area, 4))
-- EXECUTION TIME:
0.171586
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:05:14) 
-- CODE:
aresta =5**6
area =6
 
print(round(area, 4))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:16:03) 
-- CODE:
aresta =5**6
area =6
 
print(round(area, 4))
-- EXECUTION TIME:
0.213869
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:16:05) 
-- CODE:
aresta =5**6
area =6
 
print(round(area, 4))
-- EXECUTION TIME:
0.182178
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:16:06) 
-- CODE:
aresta =5**6
area =6
 
print(round(area, 4))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 14:16:56) 
-- CODE:
aresta =a**6
area =6
 
print(round(area, 4))
-- EXECUTION TIME:
0.142919
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 1, in <module>
    aresta =a**6
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:16:57) 
-- CODE:
aresta =a**6
area =6
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta =a**6
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 14:17:18) 
-- CODE:
aresta =6**5
area =6
 
print(round(area, 4))
-- OUTPUT:
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:13:42) 
-- CODE:
aresta =6
area = a=3/2*3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2*3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:14:27) 
-- CODE:
aresta =6
area = a=3/2(3a**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2(3a**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:14:39) 
-- CODE:
aresta =6
area = a=3/23a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/23a**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:16:45) 
-- CODE:
aresta =6
area = a=3/2 3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2 3a**2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:01) 
-- CODE:
aresta =6
area = a=3/2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2+3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:02) 
-- CODE:
aresta =6
area = a=3/2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2+3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:19) 
-- CODE:
aresta =5
area = a=3/2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = a=3/2+3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:55) 
-- CODE:
aresta =5
area = A=3/2(3a**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2(3a**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:57) 
-- CODE:
aresta =5
area = A=3/2(3a**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2(3a**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:58) 
-- CODE:
aresta =5
area = A=3/2(3a**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2(3a**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:17:59) 
-- CODE:
aresta =5
area = A=3/2(3a**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.132908
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = A=3/2(3a**2)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:17:59) 
-- CODE:
aresta =5
area = A=3/2(3a**2)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2(3a**2)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:23:48) 
-- CODE:
aresta =5
area = A=3/2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2+3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:23:48) 
-- CODE:
aresta =5
area = A=3/2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2+3a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:23:53) 
-- CODE:
aresta =5
area = A=3//2+3a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3//2+3a**2
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:24:02) 
-- CODE:
aresta =5
area = A=3/2+3a**2.0
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2+3a**2.0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:24:04) 
-- CODE:
aresta =5
area = A=3/2+3a**2.0
 
print(round(area, 4))
-- EXECUTION TIME:
0.205657
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = A=3/2+3a**2.0
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:24:04) 
-- CODE:
aresta =5
area = A=3/2+3a**2.0
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2+3a**2.0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:24:11) 
-- CODE:
aresta =5.0
area = A=3/2+3a**2.0
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = A=3/2+3a**2.0
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:24:22) 
-- CODE:
aresta =5
area =3/2+3a**2.0
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2+3a**2.0
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:24:23) 
-- CODE:
aresta =5
area =3/2+3a**2.0
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2+3a**2.0
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:45:35) 
-- CODE:
aresta =5
area =3/23a**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/23a**0.5
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:45:36) 
-- CODE:
aresta =5
area =3/23a**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.126655
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/23a**0.5
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:45:37) 
-- CODE:
aresta =5
area =3/23a**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.191922
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/23a**0.5
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:45:37) 
-- CODE:
aresta =5
area =3/23a**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.0990388
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/1332/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:45:37) 
-- CODE:
aresta =5
area =3/23a**0.5
 
print(round(area, 4))
-- EXECUTION TIME:
0.175391
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/23a**0.5
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:45:44) 
-- CODE:
aresta =5
area =3/23a**0.2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/23a**0.2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:45:45) 
-- CODE:
aresta =5
area =3/23a**0.2
 
print(round(area, 4))
-- EXECUTION TIME:
0.193984
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/23a**0.2
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:46:03) 
-- CODE:
aresta =5
area =3/2(a)**0.2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(a)**0.2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:05) 
-- CODE:
aresta =5
area =3/2(a)**0.2
 
print(round(area, 4))
-- EXECUTION TIME:
0.15529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2(a)**0.2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:46:19) 
-- CODE:
aresta =5
area =3/2+(a**0.2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2+(a**0.2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:20) 
-- CODE:
aresta =5
area =3/2+(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.120608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2+(a**0.2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:23) 
-- CODE:
aresta =5
area =3/2+(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.243629
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2+(a**0.2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:23) 
-- CODE:
aresta =5
area =3/2+(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.227009
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2+(a**0.2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:23) 
-- CODE:
aresta =5
area =3/2+(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.118781
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1573/1332/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:46:23) 
-- CODE:
aresta =5
area =3/2(a**0.2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2(a**0.2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:25) 
-- CODE:
aresta =5
area =3/2(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.143416
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2(a**0.2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:27) 
-- CODE:
aresta =5
area =3/2(a**0.2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.134826
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2(a**0.2)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:46:39) 
-- CODE:
aresta =5
area =3/2.a**0.2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2.a**0.2
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:40) 
-- CODE:
aresta =5
area =3/2.a**0.2
 
print(round(area, 4))
-- EXECUTION TIME:
0.139019
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area =3/2.a**0.2
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 00:46:43) 
-- CODE:
aresta =5
area =3/2*a**0.2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*a**0.2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 00:46:44) 
-- CODE:
aresta =5
area =3/2*a**0.2
 
print(round(area, 4))
-- EXECUTION TIME:
0.210075
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area =3/2*a**0.2
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:13) 
-- CODE:
aresta =5
area = 3/2*(3a)**0.2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3a)**0.2
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:23) 
-- CODE:
aresta =5
area = 3/2*(3)a**0.2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3)a**0.2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:36) 
-- CODE:
aresta =5
area = 3/2*(3)a**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3)a**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:48:02) 
-- CODE:
aresta =5
area = 3/2*(3)a**0.5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2*(3)a**0.5
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:49:39) 
-- CODE:
aresta =5
area = 3/2*(3*a**2)**0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3*a**2)**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:50:34) 
-- CODE:
aresta =5
area= 3/2*(3)*a**2**0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area= 3/2*(3)*a**2**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:50:36) 
-- CODE:
aresta =5
area= 3/2*(3)*a**2**0.5
print(round(area, 4))
-- EXECUTION TIME:
0.148987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area= 3/2*(3)*a**2**0.5
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:50:50) 
-- CODE:
aresta =5
area= 3/2*(3*a**2)**0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area= 3/2*(3*a**2)**0.5
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:02) 
-- CODE:
aresta =5
area = (3/2*(3*a**2)**0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3/2*(3*a**2)**0.5)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:13) 
-- CODE:
aresta =5
area=(3/2*(3*a**2)**0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3/2*(3*a**2)**0.5)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:15) 
-- CODE:
aresta =5
area=(3/2*(3**0.5)*a**2
print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:30) 
-- CODE:
aresta =5
area=(3/2*(3**0.5*a**2))
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=(3/2*(3**0.5*a**2))
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:42) 
-- CODE:
aresta =5
area=3/2*(3**0.5*a**2)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2*(3**0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:45) 
-- CODE:
aresta =5
area=3/2*(3**0.5*a**2)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2*(3**0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:16:40) 
-- CODE:
aresta =5
area=3/2*(3**0.5*a**2)

print(area, 4)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area=3/2*(3**0.5*a**2)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
